toolchain/parse/src/declaration/snapshots/knot_parse__declaration__tests__constant.snap
---
source: toolchain/parse/src/declaration/mod.rs
expression: ast
---
Declaration(
    Node(
        Constant {
            storage: Storage {
                visibility: Public,
                binding: Binding(
                    Node(
                        Binding(
                            "foo",
                        ),
                        Range(
                            Point(
                                1,
                                7,
                            ),
                            Point(
                                1,
                                9,
                            ),
                        ),
                        (),
                    ),
                ),
            },
            value_type: None,
            value: Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            13,
                        ),
                        Point(
                            1,
                            15,
                        ),
                    ),
                    (),
                ),
            ),
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                15,
            ),
        ),
        (),
    ),
)
