toolchain/parse/src/declaration/snapshots/knot_parse__declaration__tests__enumerated_empty_parameters.snap
---
source: toolchain/parse/src/declaration/mod.rs
expression: ast
---
Declaration(
    Node(
        Enumerated {
            storage: Storage {
                visibility: Public,
                binding: Binding(
                    Node(
                        Binding(
                            "foo",
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                8,
                            ),
                        ),
                        (),
                    ),
                ),
            },
            variants: [
                (
                    "Fizz",
                    [],
                ),
            ],
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                19,
            ),
        ),
        (),
    ),
)
