toolchain/parse/src/declaration/snapshots/knot_parse__declaration__tests__function_empty_parameters_result_typedef.snap
---
source: toolchain/parse/src/declaration/mod.rs
expression: ast
---
Declaration(
    Node(
        Function {
            storage: Storage {
                visibility: Public,
                binding: Binding(
                    Node(
                        Binding(
                            "foo",
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                8,
                            ),
                        ),
                        (),
                    ),
                ),
            },
            parameters: [],
            body_type: Some(
                TypeExpression(
                    Node(
                        Primitive(
                            Nil,
                        ),
                        Range(
                            Point(
                                1,
                                13,
                            ),
                            Point(
                                1,
                                15,
                            ),
                        ),
                        (),
                    ),
                ),
            ),
            body: Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            20,
                        ),
                        Point(
                            1,
                            22,
                        ),
                    ),
                    (),
                ),
            ),
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                22,
            ),
        ),
        (),
    ),
)
